Arrumando códigos para rodar